# SimpleSnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: collision_object.hpp  game.cpp  game.hpp  game_context.hpp  main.cpp  snake.hpp  tile.hpp
src/states/: game_over_state.hpp  game_state.hpp  main_menu_state.hpp  pause_menu_state.cpp  pause_menu_state.hpp  playing_state.cpp  playing_state.hpp
src/utilities/: utilites.hpp  utilities.cpp
